--- a/css/careers.css
+++ b/css/careers.css
@@ -753,3 +753,198 @@ body .wrapper .footer-container2__text {
   color: #FEFEFF;
   text-align: center;
 }
+
+@media screen and (max-width: 1727px) and (min-width: 1281px) {
+  body .wrapper .header {
+    padding: 23px 31px;
+  }
+  body .wrapper .main .section1 {
+    padding: 120px 0px;
+  }
+  body .wrapper .main .section2 {
+    padding: 240px 0px;
+  }
+  body .wrapper .main .section3 {
+    padding: 240px 156px;
+  }
+  body .wrapper .main .section4 {
+    padding: 240px 60px;
+  }
+  body .wrapper .main .section5 {
+    margin: 0px 30px;
+    padding: 80px 0px;
+  }
+  body .wrapper .main .section5__text {
+    width: 64%;
+  }
+  body .wrapper .footer {
+    padding: 500px 31px 80px;
+  }
+  body .wrapper .footer-contentbox2 {
+    gap: 260px;
+  }
+}
+@media screen and (max-width: 1280px) and (min-width: 834px) {
+  body .wrapper .header__btn {
+    display: none;
+  }
+  body .wrapper .header .burger-menu {
+    display: block;
+  }
+  body .wrapper .header .btn {
+    display: none;
+  }
+  body .wrapper .nav {
+    display: none;
+  }
+  body .wrapper .main .section1 {
+    padding: 100px 0px;
+  }
+  body .wrapper .main .section1__img {
+    width: 50%;
+  }
+  body .wrapper .main .section2 {
+    padding: 240px 0px;
+  }
+  body .wrapper .main .section2-container {
+    padding: 0px;
+  }
+  body .wrapper .main .section3-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  body .wrapper .main .section4 {
+    padding: 240px 0px;
+  }
+  body .wrapper .main .section4-developer__name {
+    font-size: 24px;
+  }
+  body .wrapper .main .section5 {
+    margin: 120px 0px;
+    padding: 80px 40px;
+  }
+  body .wrapper .main .section5__text {
+    width: 100%;
+  }
+  body .wrapper .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 80px;
+  }
+  body .wrapper .footer-contentbox2 {
+    gap: 254px;
+  }
+}
+@media screen and (max-width: 376px) {
+  body .wrapper .header__btn {
+    display: none;
+  }
+  body .wrapper .header .burger-menu {
+    display: block;
+  }
+  body .wrapper .header .btn {
+    display: none;
+  }
+  body .wrapper .nav {
+    display: none;
+  }
+  body .wrapper .main .section1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    padding: 100px 0px;
+  }
+  body .wrapper .main .section1-textbox__sub-title {
+    font-size: 16px;
+    margin-left: 130px;
+  }
+  body .wrapper .main .section1-textbox__title {
+    font-size: 32px;
+  }
+  body .wrapper .main .section1-textbox__text {
+    font-size: 16px;
+  }
+  body .wrapper .main .section2 {
+    padding: 240px 0px;
+  }
+  body .wrapper .main .section2-textbox__text {
+    font-size: 16px;
+  }
+  body .wrapper .main .section2-textbox__title {
+    font-size: 32px;
+  }
+  body .wrapper .main .section2-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 0px;
+  }
+  body .wrapper .main .section2-box__textbox-title {
+    font-size: 28px;
+  }
+  body .wrapper .main .section2-box__textbox-text {
+    font-size: 18px;
+  }
+  body .wrapper .main .section3 {
+    padding: 240px 0px;
+  }
+  body .wrapper .main .section3-textbox__title {
+    font-size: 32px;
+  }
+  body .wrapper .main .section4 {
+    padding: 240px 0px;
+  }
+  body .wrapper .main .section4-textbox__text {
+    font-size: 16px;
+  }
+  body .wrapper .main .section4-textbox__title {
+    font-size: 32px;
+    text-align: center;
+  }
+  body .wrapper .main .section4-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  body .wrapper .main .section4-developer__text {
+    font-size: 23px;
+  }
+  body .wrapper .main .section5 {
+    margin: 120px 0px;
+    padding: 80px 0px;
+  }
+  body .wrapper .main .section5__title {
+    font-size: 32px;
+  }
+  body .wrapper .main .section5__text {
+    font-size: 21px;
+    width: 100%;
+  }
+  body .wrapper .footer {
+    padding: 500px 0px 80px;
+  }
+  body .wrapper .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+  }
+  body .wrapper .footer-contentbox {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+  }
+  body .wrapper .footer-contentbox2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+  }
+}
