--- a/scss/careers.scss
+++ b/scss/careers.scss
@@ -274,3 +274,225 @@ body {
         }
     }
 }
+
+@media screen and (max-width: 1727px) and (min-width: 1281px) {
+    body {
+        .wrapper {
+            .header {
+                padding: 23px 31px;
+            }
+            .main {
+                .section1 {
+                    padding: 120px 0px;
+                }
+                .section2 {
+                    padding: 240px 0px;
+                }
+                .section3 {
+                    padding: 240px 156px;
+                }
+                .section4 {
+                    padding: 240px 60px;
+                }
+                .section5 {
+                    margin: 0px 30px;
+                    padding: 80px 0px;
+                    &__text {
+                        width: 64%;
+                    }
+                }
+            }
+            .footer {
+                padding: 500px 31px 80px;
+                &-contentbox2 {
+                    gap: 260px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and  (max-width: 1280px) and (min-width: 834px) {
+    body {
+        .wrapper {
+            .header {
+                &__btn {
+                    display: none;
+                }
+                .burger-menu {
+                    display: block;
+                }
+                .btn {
+                    display: none;
+                }
+            }
+            .nav {
+                display: none;
+            }
+            .main {
+                .section1 {
+                    padding: 100px 0px;
+                    &__img {
+                        width: 50%;
+                    }
+                }
+                .section2 {
+                    padding: 240px 0px;
+                    &-container {
+                        padding: 0px;
+                    }
+                }
+                .section3 {
+                    &-container {
+                        display: grid;
+                        grid-template-columns: repeat(3, 1fr);
+                    }
+                }
+                .section4 {
+                    padding: 240px 0px;
+                    &-developer {
+                        &__name {
+                            font-size: 24px;
+                        }
+                    }
+                }
+                .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 40px;
+                    &__text {
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                &-container {
+                    flex-direction: column;
+                    gap: 80px;
+                }
+                &-contentbox2 {
+                    gap: 254px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 376px) {
+    body {
+        .wrapper {
+            .header {
+                &__btn {
+                    display: none;
+                }
+                .burger-menu {
+                    display: block;
+                }
+                .btn {
+                    display: none;
+                }
+            }
+            .nav {
+                display: none;
+            }
+            .main {
+                .section1 {
+                    flex-direction: column-reverse;
+                    padding: 100px 0px;
+                    &-textbox {
+                        &__sub-title {
+                            font-size: 16px;
+                            margin-left: 130px;
+                        }
+                        &__title {
+                            font-size: 32px;
+                        }
+                        &__text {
+                            font-size: 16px;
+                        }
+                    }
+                }
+                .section2 {
+                    padding: 240px 0px;
+                    &-textbox {
+                        &__text {
+                            font-size: 16px;
+                        }
+                        &__title {
+                            font-size: 32px;
+                        }
+                    }
+                    &-container {
+                        display: grid;
+                        grid-template-columns: repeat(1, 1fr);
+                        padding: 0px;
+                    }
+                    &-box {
+                        &__textbox {
+                            &-title {
+                                font-size: 28px;
+                            }
+                            &-text {
+                                font-size: 18px;
+                            }
+                        }
+                    }
+                }
+                .section3 {
+                    padding: 240px 0px;
+                    &-textbox {
+                        &__title {
+                            font-size: 32px;
+                        }
+                    }
+                }
+                .section4 {
+                    padding: 240px 0px;
+                    &-textbox {
+                        &__text {
+                            font-size: 16px;
+                        }
+                        &__title {
+                            font-size: 32px;
+                            text-align: center;
+                        }
+                    }
+                    &-container {
+                        flex-direction: column;
+                    }
+                    &-developer {
+                        &__text {
+                            font-size: 23px;
+                            
+                        }
+                    }
+                }
+                .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 0px;
+                    &__title {
+                        font-size: 32px;
+                    }
+                    &__text {
+                        font-size: 21px;
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                padding: 500px 0px 80px;
+                &-container {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+                &-contentbox {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+                &-contentbox2 {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+            }
+        }
+    }
+}
